--- a/_includes/panel.html
+++ b/_includes/panel.html
@@ -2,18 +2,17 @@
 <div class="panel panel-default">
     <div class="panel-heading">
          <h3 class="panel-title">
-            Meetings 
-            <a href="#" data-toggle="modal" data-target="#myModal">
-                <i class="glyphicon glyphicon-search pull-right"></i>
+            Title 
+            <a href="#" data-toggle="modal" data-target="#myModal" class="pull-right ">
+                <small>details</small>
             </a>    
         </h3>
 
     </div>
     <div class="panel-body">
-        <p><small>Time spent with two or more people discussing one or more topics.</small>
-        </p>
+        <p>Description</p>
         <div>
-            {% include line-chart.html %}
+            Viz
         </div>
     </div>
 </div>
@@ -25,7 +24,7 @@
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span>
             </button>
-             <h4 class="modal-title" id="myModalLabel">Meetings</h4>
+             <h4 class="modal-title" id="myModalLabel">Modal</h4>
 
         </div>
         <div class="modal-body">
